bluejay-parser/tests/snapshots/executable_document_integration_test__error@operation_name_typo.graphql.snap
---
source: bluejay-parser/tests/executable_document_integration_test.rs
expression: formatted_errors
input_file: bluejay-parser/tests/test_data/executable_document/error/operation_name_typo.graphql
---
Error: Unexpected token
   ╭─[<unknown>:1:1]
   │
 1 │ querry {
   │ ───┬──  
   │    ╰──── Unexpected token
───╯

